Restructured + sell/check balance

--- a/public/index.html
+++ b/public/index.html
@@ -10,13 +10,13 @@
         }
     </script>
     <!-- Correct CSS path -->
-    <link rel="stylesheet" href="public/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Minecraft AFK Bot Dashboard</h1>
 
     <div id="bot-form">
-        <input type="text" id="host" placeholder="Server IP">
+        <input type="text" id="host" placeholder="play.fruitville.org" readonly value="play.fruitville.org">
         <input type="number" id="port" placeholder="Port (default 25565)">
         <input type="text" id="username" placeholder="Username / Microsoft">
         <button id="startBotBtn">Start Bot</button>
