--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
 
     <!-- Correct JS path -->
     <script src="/socket.io/socket.io.js"></script>
-<script src="/script.js"></script>
+<script src="/public/script.js"></script>
 
 </body>
 </html>
