--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,6 @@
         }
     </script>
 
-    <!-- Socket.IO client from CDN -->
-    <script src="https://cdn.socket.io/4.7.2/socket.io.min.js" integrity="sha384-RXAlx+qM3wLdZVwN0ck+uO6cH+3hzlVqv8fz3VZ4mQX0K/lrHgk6qVceU3BklzB1" crossorigin="anonymous"></script>
-
     <!-- CSS -->
     <link rel="stylesheet" href="style.css">
 </head>
@@ -59,6 +56,7 @@
     </div>
 
     <!-- Your main JS -->
-    <script src="/public/script.js"></script>
+     <script src="/socket.io/socket.io.js"></script>
+    <script src="/script.js"></script>
 </body>
 </html>
