--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,7 @@
             window.location.href = '/login.html';
         }
     </script>
-
-    <!-- CSS -->
+    <!-- Correct CSS path -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -55,8 +54,9 @@
         <button onclick="closeModal()">Close</button>
     </div>
 
-    <!-- Your main JS -->
-     <script src="/socket.io/socket.io.js"></script>
-    <script src="/script.js"></script>
+    <!-- Correct JS path -->
+    <script src="/socket.io/socket.io.js"></script>
+<script src="/script.js"></script>
+
 </body>
 </html>
